# utf8-stats

./: Cargo.toml  data.txt
src/: main.rs
