[package]
name = "utf8-stats"
version = "0.1.0"
authors = ["nomorethirst <5522646+nomorethirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
unicode-segmentation = "1.7.1"
